# direct-5D-viewer

./: .gitignore  CMakeLists.txt  CopyrightNotice.txt  README  README.md
.gitlab/issue_templates/: Bug.md  Feature.md
src/c/: Camera.cpp  Camera.h  Commands.cpp  D3d.def  D3dLib.vcxproj  D3dLib.vcxproj.filters  DataQueue.cpp  DataQueue.h  Defines.h  DirectXCommands.cpp  DirectXCommands.h  Globals.h  GraphicObject.cpp  GraphicObject.h  Image.cpp  Image.h  Initialization.cpp  Initialization.h  LoadData.cpp  MainMex.cpp  Material.cpp  Material.h  MeshPrimitive.cpp  MeshPrimitive.h  MessageProcessor.cpp  MessageProcessor.h  MessageQueue.cpp  MessageQueue.h  Mex.mexw64  MexErrorMsg.h  MexFunctions.h  Polygon.cpp  Polygon.h  QueuePolygon.cpp  QueuePolygon.h  Renderer.cpp  Renderer.h  RendererPackage.cpp  RendererPackage.h  SceneNode.cpp  (+30 more)
src/c/D3d/: Camera.cpp  Camera.h  DepthTarget.h  EigenHelpers.h  EigenToFromDirectX.cpp  EigenToFromDirectX.h  GraphicObject.cpp  GraphicObject.h  Initialization.cpp  Initialization.h  Material.cpp  Material.h  MaterialParams.cpp  MaterialParams.h  MeshPrimitive.cpp  MeshPrimitive.h  MessageProcessor.cpp  MessageProcessor.h  RenderTarget.cpp  RenderTarget.h  Renderer.cpp  Renderer.h  RendererPackage.h  SceneNode.cpp  SceneNode.h  TextRenderer.cpp  TextRenderer.h  Texture.cpp  Texture.h  TextureLightingObj.cpp  VertexLayouts.cpp  VertexLayouts.h  VolumeInfo.cpp  VolumeInfo.h
src/c/D3dLib/: CMakeLists.txt
src/c/D3dLib/D3d/: Camera.cpp  Camera.h  DepthTarget.cpp  DepthTarget.h  EigenHelpers.h  EigenToFromDirectX.cpp  EigenToFromDirectX.h  Initialization.cpp  Material.cpp  Material.h  MaterialParams.cpp  MaterialParams.h  MeshPrimitive.cpp  MeshPrimitive.h  MessageProcessor.cpp  RenderTarget.h  Renderer.cpp  Renderer.h  SceneNode.cpp  SceneNode.h  TextRenderer.cpp  TextRenderer.h  Texture.h  TextureLightingObj.h  Timer.h  VertexLayouts.h  VolumeInfo.h
src/c/D3dLib/Global/: Color.h  ErrorMsg.h  Globals.h  Vec.h  WidgetData.cpp
src/c/D3dLib/Messages/: AnimMessages.cpp  AnimMessages.h  ErrorMsg.cpp  LoadData.cpp  LoadData.h  LoadMessages.cpp  LoadMessages.h  Message.h  MessageHelpers.cpp  MessageHelpers.h  MessageQueue.cpp  MessageQueue.h  QueuePolygon.cpp  QueuePolygon.h  RenderMessages.cpp  RenderMessages.h  ReturnQueue.cpp  ReturnQueue.h  Threads.h  ViewMessages.cpp  ViewMessages.h  ViewerGlobals.cpp
src/c/D3dLib/Shaders/: StaticColorShader.hlsl  ViewAlignedVS.hlsl
src/c/Global/: Defines.h  Globals.h  ModuleInfo.cpp  ModuleInfo.h  Vec.h  WidgetData.cpp  WidgetData.h
src/c/Messages/: AnimMessages.cpp  AnimMessages.h  DataQueue.cpp  DataQueue.h  DirectXCommands.cpp  DirectXCommands.h  Image.cpp  Image.h  LoadData.cpp  LoadData.h  LoadMessages.cpp  LoadMessages.h  Message.h  MessageHelpers.cpp  MessageHelpers.h  MessageQueue.cpp  MessageQueue.h  MexErrorMsg.cpp  MexErrorMsg.h  QueuePolygon.cpp  QueuePolygon.h  RenderMessages.cpp  ReturnQueue.cpp  ReturnQueue.h  Threads.cpp  TransferObj.cpp  TransferObj.h  Update.cpp  ViewMessages.cpp  ViewMessages.h  ViewerGlobals.cpp
src/c/Mex/: CMakeLists.txt  CommandList.h  Commands.cpp  D3d.cpp  LoadData.cpp  MainMex.cpp  MexAddPolygons.cpp  MexCaptureImage.cpp  MexCaptureSpinMovie.cpp  MexCaptureWindow.cpp  MexClearAllTextures.cpp  MexClearTextureFrame.cpp  MexClose.cpp  MexCommand.cpp  MexCommand.h  MexDeleteAllPolygons.cpp  MexDisplayPolygons.cpp  MexFunctions.h  MexGlobals.h  MexInit.cpp  MexInitVolume.cpp  MexLoadPolygons.cpp  MexLoadTexture.cpp  MexLoadTextureFrame.cpp  MexMoveCamera.cpp  MexMoveDown.cpp  MexMoveLeft.cpp  MexMoveRight.cpp  MexMoveUp.cpp  MexPeelUpdate.cpp  MexPlay.cpp  MexPoll.cpp  MexPolygonLighting.cpp  MexReleaseControl.cpp  MexRemovePolygon.cpp  MexResetView.cpp  MexRotate.cpp  MexSegmentationLighting.cpp  MexSetBackColor.cpp  MexSetBoarderColor.cpp  (+40 more)
src/c/Shaders/: Fallback.hlsl  StaticVolumePixelShader.fx  StaticVolumePixelShader.hlsl  TextShader.hlsl  ViewAlignedVertexShader.hlsl  ViewAlignedVolumePS.hlsl
src/c/Standalone/: CMakeLists.txt  Standalone.cpp
src/c/Tracker/: Hull.cpp  Hull.h  Track.cpp  Track.h  Utility.cpp  Utility.h  cost.cpp  cost.h  helperutils.cpp  helperutils.h  paths.cpp  paths.h  tracker.h  trackerMex.cpp  trackerMex.def
src/matlab/: ChangeLabel.m  ChangeTrackAndChildrensFamily.m  ChangeTrackParent.m  CheckMessage.m  CheckModifiedData.m  CombineTrackWithParent.m  CompileLEVER3D.m  ConvexHull.m  CreateCleavagePlane.m  CreateHulls.m  CreatePlane.m  CudaMex.mexw64  DefaultMeshShaders.fx  Direct 5D Viewer.prj  DrawTree.m  FigureScroll.m  FigureTreeDown.m  FigureTreeUp.m  FindLargestTree.m  GetEmptyStructs.m  GetExternalDependencies.m  GetHullsToDisplay.m  GetLocalName.m  GetNextColor.m  GetRootHull.m  MakeArrow.m  MakeSphere.asv  MakeSphere.m  MoveLine.m  ProcessNewborns.m  RehashTracksHulls.m  RemoveTrackFromFamily.m  Segment.m  SetDistances.m  SiblingDistance.m  SplitHull.m  SplitTrack.m  Susan_overnight_Settings.mat  TreeClose.m  UpdateSegmentationResults.m  (+16 more)
src/matlab/+D3d/: BuildMexObject.m  BuildScript.m  Close.m  IsOpen.m  LoadImage.m  LoadTransferFunction.m  Open.m  SaveTransferFunction.m  Update.m  Viewer.mexw64
src/matlab/+D3d/+Capture/: SpinSingleFrame.m
src/matlab/+D3d/+Messaging/: Check.m  DeleteTimer.m  LoadImage.m  SetMessageHandler.m  StartTimer.m  StopTimer.m  UpdateTexture.m
src/matlab/+D3d/+Movie/: Pause.m  Rotate.m
src/matlab/+D3d/+Polygon/: CalcNorms.m  CreateCylinder.m  CreatePlane.m  DeleteAll.m  Load.m  Make.m  MakeBW.m  MakeEmptyStruct.m  MakePlaneBetween.m
src/matlab/+D3d/+Sandbox/: FourPanel4kCompositeMovie.m  MovieCaptureTest.m  hullTesting.m  make3DellipseMovie.m
src/matlab/+D3d/+UI/: AutoTransferFunction.m  Controls.fig  Controls.m  Controls_App.mlapp  GetROIimage.m  InitializeMipFigure.m  MipButtonDown.m  (+3 more)
src/matlab/+ImProc/: ContrastEnhancement.m  DistMap.m  MRFDenoise.m
src/matlab/+Messaging/: UpdateTexture.m
src/matlab/+Seg/: Segment.m  SegmentBlob.m
src/matlab/+UI/: CalcCurve.m  PlotTransferFunctions.m  UpdateCurrentState.m
src/matlab/+d3dViewer/: checkMessage.m  close.m  d3dViewer.mexw64  open.m
(+79 files in other folders)
